Update arglib-server for warrant-gated APIs
